rust-regex-dsl_derive/tests/ui/empty_regex.stderr
error: Empty regex is not supported
 --> tests/ui/empty_regex.rs:4:24
  |
4 |     let regex = regex!("");
  |                        ^^
