rust-regex-dsl_derive/tests/ui/empty_regex.rs
pub use rust_regex_dsl::regex;

fn main() {
    let regex = regex!("");
    println!("{}", regex);
}